connected confirm delete modals to group delete and fixed overflow display bug

--- a/components/input/ConfirmDelete.module.css
+++ b/components/input/ConfirmDelete.module.css
@@ -17,6 +17,7 @@
     bottom:0;
     left:0;
     right:0;
+    z-index: 1000;
 }
 
 .content {
@@ -66,3 +67,4 @@
     cursor: pointer;
     transform: scale(1.1);
 }
+
