--- a/components/ui/GroupCard.module.css
+++ b/components/ui/GroupCard.module.css
@@ -1,10 +1,115 @@
 .card {
     width: 30%;
-    min-width: 300px;
+    min-width: 320px;
+    max-width: 400px;
     height: auto;
-    background-color: rgba(222, 195, 174, 0.5);
-    margin: 1rem;
+    background-color: rgb(214, 177, 133);
+    margin: 1rem 0;
+    overflow: hidden;
     padding: 1rem;
     -webkit-box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0,0,0,0); 
     box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0,0,0,0);
+    position: relative;
+}
+
+.card h3 {
+    text-align: center;
+    font-family: 'Oleo Script', cursive;
+    font-size: 1.5em;
+    letter-spacing: 1px;
+    color: var(--primary)
+}
+
+.card button {
+    font-family: 'Roboto', sans-serif;
+    border: none;
+    -webkit-box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0,0,0,0); 
+    box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0,0,0,0);
+}
+
+.addMember{
+    width: 100%;
+    margin:auto;
+    height: auto;
+    min-height: 2.5rem;
+    padding: .2rem;
+    display: block;
+    border: none;
+    background-color: var(--light);
+    font-size: 1em;
+    color:var(--secondary);
+    transition: .3s;
+}
+
+.addMember:hover {
+    transform:scale(1.05)
+}
+
+.card button:hover{
+    cursor: pointer;
+}
+
+.owner {
+    color: var(--primary);
+    font-size: 1.2em;
+    display: block;
+    font-family: 'Oleo Script', cursive;
+}
+
+.btnContainer button {
+    
+    padding: .7rem;
+    font-size: .8em;
+    margin: .2rem;
+   
+    transition: .3s;
+    
+}
+
+.btnContainer button:hover{
+    transform:scale(1.1)
+}
+
+.btnContainer {
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    position: absolute;
+    bottom: 0;
+    padding-bottom: 1rem;
+}
+
+.memberContainer{
+    background-color: rgba(222, 195, 174, 0.4);
+    padding: .5rem 1rem;
+    margin-top: .5rem;
+    margin-bottom: 4rem;
+    -webkit-box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0,0,0,0); 
+    box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0,0,0,0);
+}
+
+.viewBtn {
+    background-color: var(--light);
+
+}
+
+.deleteBtn {
+    background-color: var(--primary);
+}
+
+.editBtn {
+    background-color: var(--accent);
+}
+
+@media screen and (max-width:500px) {
+    .btnContainer {
+        flex-direction: column;
+        position: relative;
+    }
+    .memberContainer{
+        margin-bottom: 1rem;
+    }
+    .btnContainer button {
+        border-radius: 0;
+    }
 }
