--- a/styles/pages-styles/dashboard.module.css
+++ b/styles/pages-styles/dashboard.module.css
@@ -13,7 +13,8 @@
 }
 
 .cardContainer {
+    width: 100%;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     flex-wrap: wrap;
 }
